Add event start_at to return value of FantasyLeagues
