# server/swagger/FantasyLeague.json
@@ -84,6 +84,10 @@
     "event": {
       "type": "object",
       "properties":{
+        "start_at":{
+          "type":"integer",
+          "format":"int32"
+        },
         "tournament":{
           "type": "object",
           "properties":{
